Update codeigniter 4 app to version 4.1.5

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ php_errors.log
 #-------------------------
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
+user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 
 #-------------------------
@@ -83,7 +84,6 @@ phpunit
 # Composer
 #-------------------------
 vendor/
-composer.lock
 
 #-------------------------
 # IDE / Development Files
@@ -103,6 +103,7 @@ _modules/*
 nbproject/
 build/
 nbbuild/
+dist/
 nbdist/
 nbactions.xml
 nb-configuration.xml
@@ -123,3 +124,4 @@ nb-configuration.xml
 /results/
 /phpunit*.xml
 /.phpunit.*.cache
+
